migrate to OkHttp instead of HttpUrlConnection
OkHttp gives us more fine grained control over the HTTP library and frees us from any platform bugs

(cherry picked from commit e217551a8294dc44aa4acd9d0d5692285108c3a5)