@@ -31,14 +31,14 @@ package eu.siacs.conversations.utils;
 
 import com.google.common.base.Strings;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.regex.Pattern;
 
 import eu.siacs.conversations.entities.Conversational;
 import eu.siacs.conversations.entities.Message;
-import eu.siacs.conversations.http.AesGcmURLStreamHandler;
-import eu.siacs.conversations.http.P1S3UrlStreamHandler;
+import eu.siacs.conversations.http.AesGcmURL;
+import eu.siacs.conversations.http.URL;
 
 public class MessageUtils {
 
@@ -81,28 +81,32 @@ public class MessageUtils {
     }
 
     public static boolean treatAsDownloadable(final String body, final boolean oob) {
-        try {
             final String[] lines = body.split("\n");
             if (lines.length == 0) {
                 return false;
             }
-            for (String line : lines) {
+        for (final String line : lines) {
                 if (line.contains("\\s+")) {
                     return false;
                 }
             }
-            final URL url = new URL(lines[0]);
-            final String ref = url.getRef();
-            final String protocol = url.getProtocol();
-            final boolean encrypted = ref != null && AesGcmURLStreamHandler.IV_KEY.matcher(ref).matches();
-            final boolean followedByDataUri = lines.length == 2 && lines[1].startsWith("data:");
-            final boolean validAesGcm = AesGcmURLStreamHandler.PROTOCOL_NAME.equalsIgnoreCase(protocol) && encrypted && (lines.length == 1 || followedByDataUri);
-            final boolean validProtocol = "http".equalsIgnoreCase(protocol) || "https".equalsIgnoreCase(protocol) || P1S3UrlStreamHandler.PROTOCOL_NAME.equalsIgnoreCase(protocol);
-            final boolean validOob = validProtocol && (oob || encrypted) && lines.length == 1;
-            return validAesGcm || validOob;
-        } catch (MalformedURLException e) {
+        final URI uri;
+        try {
+            uri = new URI(lines[0]);
+        } catch (final URISyntaxException e) {
             return false;
         }
+        if (!URL.WELL_KNOWN_SCHEMES.contains(uri.getScheme())) {
+            return false;
+        }
+        final String ref = uri.getFragment();
+        final String protocol = uri.getScheme();
+        final boolean encrypted = ref != null && AesGcmURL.IV_KEY.matcher(ref).matches();
+            final boolean followedByDataUri = lines.length == 2 && lines[1].startsWith("data:");
+        final boolean validAesGcm = AesGcmURL.PROTOCOL_NAME.equalsIgnoreCase(protocol) && encrypted && (lines.length == 1 || followedByDataUri);
+        final boolean validProtocol = "http".equalsIgnoreCase(protocol) || "https".equalsIgnoreCase(protocol);
+            final boolean validOob = validProtocol && (oob || encrypted) && lines.length == 1;
+            return validAesGcm || validOob;
     }
 
     public static String filterLtrRtl(String body) {
